--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World!!!</h1>
+    <p>This site is currently under construction</p>
 </body>
 </html>
