Added content to few pages

--- a/index.html
+++ b/index.html
@@ -31,11 +31,27 @@
     </ul>
 </div>
     </nav>
+    <br>
+    <br>
+<div class="index_body">
+    <div class="summary_me">
+<h2>A Summary of Me:</h2>
+<p>
+   Hi, my Name is Kamran (american-version: Cameron), I am currently a student at Metro State University 
+   pursuing my Masters in Computer Science. I like understanding concepts rather than cramming them as I am
+   not that good at memorizing things but have realized that I remember things when I understand them. I am 
+   a quick learner, provide me with the right resources and I can connect the dots and understand it.
+   I like challenges, if someone says I can't then I feel I definetley have to prove them wrong.
 
-
-
+</p>
+</div>
+<div class="education">
+<h2>My Education:</h2>
+<p>I am currently pursuing my Masters degree in Computer Science at Metro State University.
+    I completed my Bachelors in Computer Science at VTU.
+</p>
     
     
-    <p>This site is currently under construction</p>
+    </div>
 </body>
 </html>
