--- a/skills.html
+++ b/skills.html
@@ -29,5 +29,23 @@
     </ul>
 </div>
     </nav>
+
+    <div class="inner_body">
+        
+        <div class="skills">
+            <h2>My Skills:</h2>
+        <ul class="skill_list">
+            <li>Java</li>
+            <li>Python</li>
+            <li>C Programming</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Data Structures</li>
+            <li>Algorithms</li>
+            <li>JavaScript</li>
+            <li>AI/Prompt Engineering</li>
+            </ul>
+            </div>
+    </div>
 </body>
 </html>
