--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styling.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
+<body class="work_body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -32,7 +32,24 @@
 </div>
     </nav>
 
-    <div class="inner_body">
+<div class="work_container">
+    <h2>Computer Science Tutor: Oct 2023 - Present</h2>
+    <p>I currently work Part-time at Metro State University as a Peer Computer Scence Tutor. This position requires
+        me to help students from diverse backgrounds, try and understand what way the concepts can be conveyed to a student as I see
+        students who may want a different approach. It also teaches me to have patience and try to understand why a student may be having difficulties with a certain
+        concept, for example "Is there a concept from an earlier class which might not be making sense hence the problem with the different concept?"
+    </p>
+    <p>Job Responsibilities include assisting students and helping them understand:</p>
+
+    <ul>
+    <li>Java</li>
+    <li>Python</li>
+    <li>C Programming</li>
+    <li>CSS and HTML</li>
+    <li>Data Structures and Algorithms</li>
+    <li>MySQL</li>
+
+ </ul>
         </div>
 </body>
 </html>
