--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,7 @@
                     <li>Python</li>
                     <li>Tkinter</li>
                     <li>Gemini API</li>
+                    <li>Prompt Engineering</li>
 
                  </ul>
             </div>
