Updates and refinement

--- a/skills.html
+++ b/skills.html
@@ -7,28 +7,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body class="skills_body">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
+     <header class="header">
+        <div class="links">
             <a class="nav-link" href="index.html">About Me</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="projects.html">Projects</a>
-</li>
-
-<li class="nav-item">
-    <a class="nav-link" href="work.html">Work</a>
-</li>
-
-
-<li class="nav-item active">
-    <a class="nav-link" href="skills.html">Skills</a>
-</li>
-
-    </ul>
-</div>
-    </nav>
+            <a class="nav-link" href="work.html">Work</a>
+            <a class="nav-link" href="projects.html">Projects</a>
+            <a class="nav-link" href="skills.html">Skills</a>
+        </div>
+        <h3>Kamran's Portfolio</h3>
+    </header>
 
     
         
