--- a/projects.html
+++ b/projects.html
@@ -8,28 +8,16 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
+    <header class="header">
+        <div class="links">
             <a class="nav-link" href="index.html">About Me</a>
-    </li>
-    <li class="nav-item active">
-        <a class="nav-link" href="projects.html">Projects</a>
-</li>
-
-<li class="nav-item ">
-    <a class="nav-link" href="work.html">Work</a>
-</li>
-
-
-<li class="nav-item ">
-    <a class="nav-link" href="skills.html">Skills</a>
-</li>
-
-    </ul>
-</div>
-    </nav>
+            <a class="nav-link" href="work.html">Work</a>
+            <a class="nav-link" href="projects.html">Projects</a>
+            <a class="nav-link" href="skills.html">Skills</a>
+        </div>
+        <h3>Kamran's Portfolio</h3>
+    </header>
+    
     <div class="container">
 
         <div class="row">
