--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <footer class="footer">
         <author>©Kamran</author>
         <email><a href="mailto:syedkamran.khatai@metrostate.edu"><img class="footer-img"  src="images/E-Mail.png" alt="email icon" width="40" height="40"></a></email>
-        <github><a href="https://github.com/skam16"><img class="footer-img" src="/images/github-mark.png
+        <github><a href="https://github.com/skam16"><img class="footer-img" src="images/github-mark.png
             " alt="github logo" width="25" height="25"></a></github>
-        <linkedin><a href="https://www.linkedin.com/in/syed-kamran-khatai-0b6154162"><img class="footer-img" src="/images/InBug-Black.png" alt="linkedin logo" width="25" height="25"></a></linkedin>
+        <linkedin><a href="https://www.linkedin.com/in/syed-kamran-khatai-0b6154162"><img class="footer-img" src="images/InBug-Black.png" alt="linkedin logo" width="25" height="25"></a></linkedin>
         <resume><img class="footer-img" src="images/Page Facing Up.png"></resume>
     </footer>
 </body>
