--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kamran's Portfolio</title>
-    <link rel="stylesheet" href="styling.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
 
@@ -13,12 +13,28 @@
         <nav class="header-nav">
             <a href="#index.html" class="header-nav-link"> Home</a>
             <a href="projects.html" class="header-nav-link">Projects</a>
-            <a href="work.html" class="header-nav-link">Experience</a>
+            <a href="experience.html" class="header-nav-link">Experience</a>
             <a href="skills.html" class="header-nav-link">Skills</a>
         </nav>
     </header>
    
     <main class="main">
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
         
     </main>
 
