--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
     </header>
    
     <main class="main">
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cumque reprehenderit quos iure iusto et harum, consequatur porro ad architecto. Consequuntur, labore! Laborum nulla, magnam nisi iste placeat illo quo?</p>
+      <section>
+        <h2>About Me</h2>
+        <p>Hello! I'm Kamran, aspiring software developer with experience in web development and software engineering. I have a Master's in Computer Science From Metropolitan State University. I currently work part-time at Metropolitan State University as a Computer Science Instructor. I have previously worked here as a Peer Computer Science Tutor too.</p>
+        <br>
+        <p> Things I try to live by:</p>
+        <ul>
+        <li><p>Learning by practice, I use the same strategy be it when teaching my class at Metro State or learning new concepts to upskill or review.</p></li>
+        <li><p>Learning is a lifelong process which is why I am always open to new ideas and new concepts in my field.</p></li>
+
+    <li><p>I don't know everything but I can always learn new things.</p></li>
+    <li><p>Don't look at the tone or age or position of authority of a person, rather listen to what they are saying.</p></li>
+
+    <li><p>Always open to constructive criticism.</p></li>
+        </ul>
         
+
+    
+        <br>
+        <p class="section-center">Explore my projects, skills, and experience through the links above and below!</p>
+      </section>
+
     </main>
 
     <footer class="footer">
