--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <github><a href="https://github.com/skam16"><img class="footer-img" src="images/github-mark.png
             " alt="github logo" width="25" height="25"></a></github>
         <linkedin><a href="https://www.linkedin.com/in/syed-kamran-khatai-0b6154162"><img class="footer-img" src="images/InBug-Black.png" alt="linkedin logo" width="25" height="25"></a></linkedin>
-        <resume><img class="footer-img" src="images/Page Facing Up.png"></resume>
+        <resume><a href="Resume/Kamran_Resume.pdf" download><img class="footer-img" src="images/Page Facing Up.png"></a></resume>
     </footer>
 </body>
 </html>
