Made changes to style and added images
Added images to projects, added more media query rules.

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <project class="card">
                 <description class="project-description">
                     <h3>AI Tutor</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/AI Tutor/1.png" width="300" height="300" alt="AI Tutor screenshot"/>
                     <p>Designed an AI assistant to provide assignment guidance without revealing answers.</p>
                     <p>Uses Gemini AI</p>
                     <p>React, CSS, HTML, JavaScript,Firebase</p>
@@ -34,7 +34,7 @@
             <project class="card">
                 <description class="project-description">
                     <h3>Portfolio Website</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/Portfolio/1.png" width="300" height="300" alt="Portfolio website screenshot"/>
                     <p>Portfolio Website to Showcase my skills</p>
                     <p>Added links to See my GitHub, LinkedIn</p>
                     <p>Added my email button to contact me via email.</p>
@@ -47,7 +47,7 @@
 
                 <description class="project-description">
                     <h3>Whatsapp Clone</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/Whatsapp Clone/1.png" width="300" height="300" alt="Whatsapp clone scereenshot"/>
                     <p>Simple Whatsapp clone following YouTube Tutorial of Sonny Sangha</p>
                     <p>makes use of NextJS and Vercel</p>
                     <p>Uses React, JavaScript, Firebase, HTML and CSS</p>
@@ -60,7 +60,7 @@
 
                 <description class="project-description">
                     <h3>Optical Mark Recognition using Image Processing in  Python</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/OMR/1.png" width="300" height="300" alt="OMR project Screenshot"/>
                     <p>A simple mobile App which captures image and send to the Python back-end</p>
                     <p>One of my first projects where I sent an image over https, converting it to binary and redrawing the image on the back-end</p>
                     <p>Makes use of Python for Image Processing, Dart programming with Flutter framework for front-end Mobile App</p>
@@ -72,7 +72,7 @@
 
                 <description class="project-description">
                     <h3>Rare Disease Detection using Bayesian Networks</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/Rare Disease/1.png" width="300" height="300" alt="Rare Disease Detection Screenshot"/>
                     <p>A project which uses Bayesian Networks to detect probability of certain rare diseases given some features.</p>
                     <p>the data-set and model was prepared by Dr. Kahn a Radiologist from University of Pennsylvania.</p>
                     <p>I worked on the front-end and extracting information from the xml file Structure using Java</p>
@@ -85,7 +85,7 @@
 
                 <description class="project-description">
                     <h3>Event Rooms</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/Blockchain/3.png" width="300" height="300" alt="Event room screenshot"/>
                     <p>A Blockchain webiste running on ethereum Test net</p>
                     <p>The project aimed at creating an event room service to connect people wanting to do an activity together.</p>
                     <p>It was a team project, I worked on the front-end JavaScript and connecting to the solidity network through Web3</p>
@@ -99,7 +99,7 @@
 
                 <description class="project-description">
                     <h3>Calculator App</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/Calculator/1.png" width="300" height="300" alt="calculator app screenshot"/>
                     <p>A simple calculator using Flutter and dart.</p>
                 </description>
 
@@ -109,7 +109,7 @@
 
                 <description class="project-description">
                     <h3>YouTube search API</h3>
-                    <img/>
+                    <img class="projects-image" src="projectImages/Youtube/1.png" width="300" height="300" alt="YouTube search page project screenshot"/>
                     <p> A basic YouTube search page which started pulling results as soon as there are 3 or more characters entered.</p>
                     <p>Made this to practice using third-party APIs and learn JSON</p>
                 </description>
