Added a menu for smaller screens
Added a menu which opens on hover for smaller screens to prevent overflow for navigation pane.

--- a/experience.html
+++ b/experience.html
@@ -9,6 +9,16 @@
 
     <header class="header">
         <h2 class="header-h2">My Experience</h2>
+        <menu class="menu-nav">
+            <h2 class="menu-nav-symbol">Menu</h2>
+            <nav class="menu-nav-list">
+            <a href="index.html" class="header-nav-link"> Home</a>
+            <a href="projects.html" class="header-nav-link">Projects</a>
+            <a href="#experience.html" class="header-nav-link">Experience</a>
+            <a href="skills.html" class="header-nav-link">Skills</a>
+        </nav>
+    </menu>
+
         <nav class="header-nav">
             <a href="index.html" class="header-nav-link"> Home</a>
             <a href="projects.html" class="header-nav-link">Projects</a>
