--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kamran Skills</title>
+    <title>Kamran's Skills</title>
     <link rel="stylesheet" href="css/style.css">
     </head>
     
