made menu for smaller screens
Implemented on hover menu using CSS.

--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
         <h2 class="header-h2">My Skills</h2>
 
         <menu class="menu-nav">
-            <h2 class="menu-nav-symbol">Menu</h2>
+            <h2 class="menu-nav-h2">Menu</h2>
             <nav class="menu-nav-list">
             <a href="index.html" class="header-nav-link"> Home</a>
             <a href="projects.html" class="header-nav-link">Projects</a>
